fix: mobile align

--- a/calculator/style.css
+++ b/calculator/style.css
@@ -24,6 +24,8 @@ body {
     margin-top: 20px;
     font-family: 'Caveat', cursive;
     font-size: 2rem;
+    text-align: center;
+    padding: 0 20px;
 }
 /* END COMMON STYLES*/
 
@@ -65,6 +67,12 @@ body {
     border-radius: 50%;
     font-size: 1.5rem;
     font-family: 'Roboto', sans-serif;
+}
+
+.calculator button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .digit-block {
